// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Connected/Search mobile search bar 1`] = `
<Search store={{}} mobile={true} searchValue={null} updateSearch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <InputGroup className={"app-bar-search"} size={"sm"} seamless={true} tag={"div"}>
    <div className={"app-bar-search input-group input-group-seamless input-group-sm"}>
      <InputGroupAddon type={"prepend"} tag={"div"}>
        <div className={"input-group-prepend"}>
          <InputGroupText tag={"span"}>
            <span className={"input-group-text"}>
              <FontAwesomeIcon icon={{"prefix":"fas","iconName":"search","icon":[512,512,[],"f002","M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"]}} border={false} className={""} mask={null} fixedWidth={false} inverse={false} flip={null} listItem={false} pull={null} pulse={false} rotation={null} size={null} spin={false} symbol={false} title={""} transform={null}>
                <svg aria-hidden={"true"} focusable={"false"} data-prefix={"fas"} data-icon={"search"} className={"svg-inline--fa fa-search fa-w-16 "} role={"img"} xmlns={"http://www.w3.org/2000/svg"} viewBox={"0 0 512 512"} style={{}}>
                  <path fill={"currentColor"} d={"M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"} style={{}} />
                </svg>
              </FontAwesomeIcon>
            </span>
          </InputGroupText>
        </div>
      </InputGroupAddon>
      <FormInput className={"border-0"} placeholder={"Search..."} value={""} onChange={"function"}>
        <input placeholder={"Search..."} value={""} onChange={"function"} className={"border-0 form-control"} />
      </FormInput>
    </div>
  </InputGroup>
</Search>
`;

exports[`Storyshots Connected/Search search bar 1`] = `
<Search store={{}} searchValue={null} updateSearch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <InputGroup className={"app-bar-search-mobile"} size={"2x"} seamless={true} tag={"div"}>
    <div className={"app-bar-search-mobile input-group input-group-seamless input-group-2x"}>
      <InputGroupAddon type={"prepend"} tag={"div"}>
        <div className={"input-group-prepend"}>
          <InputGroupText tag={"span"}>
            <span className={"input-group-text"}>
              <FontAwesomeIcon icon={{"prefix":"fas","iconName":"search","icon":[512,512,[],"f002","M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"]}} border={false} className={""} mask={null} fixedWidth={false} inverse={false} flip={null} listItem={false} pull={null} pulse={false} rotation={null} size={null} spin={false} symbol={false} title={""} transform={null}>
                <svg aria-hidden={"true"} focusable={"false"} data-prefix={"fas"} data-icon={"search"} className={"svg-inline--fa fa-search fa-w-16 "} role={"img"} xmlns={"http://www.w3.org/2000/svg"} viewBox={"0 0 512 512"} style={{}}>
                  <path fill={"currentColor"} d={"M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"} style={{}} />
                </svg>
              </FontAwesomeIcon>
            </span>
          </InputGroupText>
        </div>
      </InputGroupAddon>
      <FormInput className={"border-0"} placeholder={"Search..."} value={""} onChange={"function"}>
        <input placeholder={"Search..."} value={""} onChange={"function"} className={"border-0 form-control"} />
      </FormInput>
    </div>
  </InputGroup>
</Search>
`;
